download static report
